--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Employee CRM</title>
+    <title>Employee Management</title>
     <link rel="stylesheet" href="styles.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -16,7 +16,7 @@
     <div class="app">
       <header class="hero">
         <div>
-          <p class="eyebrow">Employee CRM</p>
+          <p class="eyebrow">Employee Management</p>
           <h1>Manage your team in one workspace</h1>
           <p class="subtitle">
             Create, edit, and remove employees without extra clicks — all inside
@@ -40,11 +40,11 @@
             </label>
             <label>
               Salary (base)
-              <input type="number" name="salary" min="5001" placeholder="70000" required />
+              <input type="number" name="salary" min="5000" placeholder="70000" required />
             </label>
             <button type="submit" class="primary">Create card</button>
           </form>
-          <p class="hint">Minimum salary is 5001.</p>
+          <p class="hint">Minimum salary is 5000.</p>
         </div>
       </header>
 
@@ -81,7 +81,7 @@
             </label>
             <label>
               New salary (base)
-              <input type="number" name="salary" min="5001" placeholder="85000" />
+              <input type="number" name="salary" min="5000" placeholder="85000" />
             </label>
             <button type="submit" class="primary">Save changes</button>
           </form>
